# web-scrapping-ebook-scrapper

./: book_info_urls.csv  book_info_urls.json  main.py  pyproject.toml  test.csv  urls_of_book_info.csv
data/: ebooks_details  urls_of_book_info
ebook_scrapper/: book_details.py  book_info_url.py  scapper.py  web_scrapper.py
notebooks/: scrapper.ipynb
