[tool.poetry]
name = "ebook-scrapper"
version = "0.1.0"
description = ""
authors = ["gaurav-gaikwad-12071998 <122888092+gaurav-gaikwad-12071998@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
aiohttp = "^3.9.5"
httpx = "^0.27.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
book-info-urls = 'main:get_book_info_urls_main'